--- a/index.html
+++ b/index.html
@@ -128,9 +128,9 @@
     </div>
       <h2><em>What the heck is this place?</em></h2>
       <p><strong>Good Question!</strong><br>This is a web site that Weazel is using to learn html5 and css3</p>
-      <h3 class="Bold">Oh... it looks awful, you're pretty bad</h2>
+      <h3 class="Bold">Oh... it looks awful, you're pretty bad</h3>
       <p>Yes I know, but you have to start somewhere, but since you are here...</p>
-      <h2>Here is what I'm learning</h3>
+      <h2>Here is what I'm learning</h2>
       </div>
       
       <a href="#endOfPage">Jump to the end of the Page</a>
@@ -145,7 +145,7 @@
       In this paragraph I used CSS to make sure this writing appears to the right of the bear picture instead of immediatly below it.<br> 
       </p><div id="Strikethrough"><p>The method i used is "relative" which means it will be placed where it usually goes plus the top and left value.<br> 
       This can especially make the placement of this text different depending on what screen you are viewing this web site.<br> 
-      For instance on your phone, this may seem way off center with the piture. </div></p>
+      For instance on your phone, this may seem way off center with the piture. </div>
       <p>The Method I actually used was on the image id, I added a CSS rule that would float the image to the left of whatever came next.<br>
       I included the image in the same 'p' as this paragraph.
       </p>
@@ -191,7 +191,7 @@
             <td>14</td>
             <td>7</td>
             <td>7</td>
-            <td><img src="https://s-media-cache-ak0.pinimg.com/564x/14/f3/6b/14f36bde74f5e382fbeae62e9b58a87e.jpg" width="150"></td>
+            <td><img src="https://s-media-cache-ak0.pinimg.com/564x/14/f3/6b/14f36bde74f5e382fbeae62e9b58a87e.jpg" width="150" alt="Fantasy Image"></td>
           </tr>
           <tr>
             <td>Leandro</td>
@@ -199,7 +199,7 @@
             <td>13</td>
             <td>8</td>
             <td>10</td>
-            <td><img src="http://www.wallpaperup.com/uploads/wallpapers/2013/03/24/60839/big_thumb_eee8709d9a46e942fab8d8afe0c0a65d.jpg" width="150"></td>
+            <td><img src="http://www.wallpaperup.com/uploads/wallpapers/2013/03/24/60839/big_thumb_eee8709d9a46e942fab8d8afe0c0a65d.jpg" width="150" alt="Fantasy Image"></td>
           </tr>
           <tr>
             <td>Brian</td>
@@ -207,7 +207,7 @@
             <td>16</td>
             <td>6</td>
             <td>4</td>
-            <td><img src="http://sf.co.ua/13/03/wallpaper-2643863.jpg" width="150"></td>
+            <td><img src="http://sf.co.ua/13/03/wallpaper-2643863.jpg" width="150" alt="Fantasy Image"></td>
           </tr>
           <tr>
             <td>Leilane</td>
@@ -215,7 +215,7 @@
             <td>10</td>
             <td>10</td>
             <td>8</td>
-            <td><img src="https://s-media-cache-ak0.pinimg.com/736x/29/dd/2a/29dd2a38df9951d51880418dff897446.jpg" width="150"></td>
+            <td><img src="https://s-media-cache-ak0.pinimg.com/736x/29/dd/2a/29dd2a38df9951d51880418dff897446.jpg" width="150" alt="Fantasy Image"></td>
           </tr>
           <tr>
             <td>Kevin</td>
@@ -223,7 +223,7 @@
             <td>15</td>
             <td>8</td>
             <td>8</td>
-            <td><img src=https://s-media-cache-ak0.pinimg.com/564x/36/d1/cf/36d1cfe534a0696ed72d5136879ff07b.jpg width="150"></td>
+            <td><img src=https://s-media-cache-ak0.pinimg.com/564x/36/d1/cf/36d1cfe534a0696ed72d5136879ff07b.jpg width="150" alt="Fantasy Image"></td>
           </tr>
         </tbody>
       </table>
