--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <title>WeazelsTesting1 by weazelteles85</title>
     <style>
+    * {
+      box-sizing: border-box;
+    }
     body {
       background-color: rgb(250, 245, 147);
     }
