--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
       }
       @media (max-width:992px) {
         #Bear-Pic {
-          width:200%;
+          width:100%;
+          height:100%;
         }
       }
       
