--- a/index.html
+++ b/index.html
@@ -156,8 +156,8 @@
         <p>The image to my left was pulled from wikimedia.org and is a jpg file<br>
       In this paragraph I used CSS to make sure this writing appears to the right of the bear picture instead of immediatly below it.<br> 
       </p><div id="Strikethrough"><p>The method i used is "relative" which means it will be placed where it usually goes plus the top and left value.<br> 
-      This can especially make the placement of this text different depending on what screen you are viewing this web site.<br> 
-      For instance on your phone, this may seem way off center with the piture. </div>
+      However I added a @media(max-width: 992px) so that any device with less than 992 pixels, this image will resize to 25% of its <br>
+      Original size</div>
       <p>The Method I actually used was on the image id, I added a CSS rule that would float the image to the left of whatever came next.<br>
       I included the image in the same 'p' as this paragraph.
       </p>
