--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
         border: 3px dashed gray;
         background-color: rgb(220,220,220);
         padding-left: 2px;
+        overflow: auto;
       }
       #restOfBody {
         clear: both;
